# CanalServisProject

./: .env.docker.example  .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
CanalServisProject/: asgi.py  settings.py  urls.py  wsgi.py
api_servis/: apps.py  celery.py  models.py  tasks.py  urls.py  utils.py  views.py
templates/: analytics.css  analytics.html
tg_bot/: handler.py  models.py  urls.py  views.py
